--- a/css/parallax.css
+++ b/css/parallax.css
@@ -22,18 +22,49 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    height: 100%;
+    height: 600px;
     width: 100%;   
 }
 
+/* tablet */
+@media only screen and (max-width : 768px)  {
+    .bcg {
+        height: 300px;
+    }
+}
+
+/* Extra Small Devices, Phones */ 
+@media only screen and (max-width : 480px) {
+    .movingBackground {
+        height: 500px;
+        overflow: hidden;
+    }
+}
+
 .movingBackground {
-	padding: 100px 0px 0px 0px;
+    padding: 100px 0px 0px 0px;
 }
 
 .movingBackground h2 {
-	font-family: inherit;
+    font-family: inherit;
 }
 
 /* Slide 1 */
-#slide-1 .bcg {background-image:url('../img/bg2.jpg')}
-#slide-2 .bcg {background-image:url('../img/bg3.jpg')}
+#bg1 .bcg {background-image:url('../img/bg1.jpg')}
+#bg2 .bcg {background-image:url('../img/bg2.jpg')}
+
+/*.mobile body {
+  overflow: hidden;
+}
+
+.mobile #wrapper {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
+.mobile #scroller {
+  height: 11000px;
+}*/
