--- a/css/agency.css
+++ b/css/agency.css
@@ -350,19 +350,19 @@ section h3.section-subheading {
     text-transform: none;
 }
 
-#portfolio .portfolio-item {
+#leadership .leadership-item {
     right: 0;
     margin: 0 0 15px;
 }
 
-#portfolio .portfolio-item .portfolio-link {
+#leadership .leadership-item .leadership-link {
     display: block;
     position: relative;
     margin: 0 auto;
     max-width: 400px;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover {
+#leadership .leadership-item .leadership-link .leadership-hover {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -373,11 +373,11 @@ section h3.section-subheading {
     transition: all ease .5s;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
+#leadership .leadership-item .leadership-link .leadership-hover:hover {
     opacity: 1;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
+#leadership .leadership-item .leadership-link .leadership-hover .leadership-hover-content {
     position: absolute;
     top: 50%;
     width: 100%;
@@ -388,41 +388,41 @@ section h3.section-subheading {
     color: #fff;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content i {
+#leadership .leadership-item .leadership-link .leadership-hover .leadership-hover-content i {
     margin-top: -12px;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h3,
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h4 {
+#leadership .leadership-item .leadership-link .leadership-hover .leadership-hover-content h3,
+#leadership .leadership-item .leadership-link .leadership-hover .leadership-hover-content h4 {
     margin: 0;
 }
 
-#portfolio .portfolio-item .portfolio-caption {
+#leadership .leadership-item .leadership-caption {
     margin: 0 auto;
-    padding: 25px;
+    padding: 25px 18px 25px 18px;
     max-width: 400px;
     text-align: center;
     background-color: #fff;
 }
 
-#portfolio .portfolio-item .portfolio-caption h4 {
+#leadership .leadership-item .leadership-caption h4 {
     margin: 0;
     text-transform: none;
 }
 
-#portfolio .portfolio-item .portfolio-caption p {
+#leadership .leadership-item .leadership-caption p {
     margin: 0;
     font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 16px;
     font-style: italic;
 }
 
-#portfolio * {
+#leadership * {
     z-index: 2;
 }
 
 @media(min-width:767px) {
-    #portfolio .portfolio-item {
+    #leadership .leadership-item {
         margin: 0 0 30px;
     }
 }
@@ -768,7 +768,7 @@ ul.social-buttons li a:active {
     outline: 0;
 }
 
-.portfolio-modal .modal-content {
+.leadership-modal .modal-content {
     padding: 100px 0;
     min-height: 100%;
     border: 0;
@@ -779,32 +779,32 @@ ul.social-buttons li a:active {
     box-shadow: none;
 }
 
-.portfolio-modal .modal-content h2 {
+.leadership-modal .modal-content h2 {
     margin-bottom: 15px;
     font-size: 3em;
 }
 
-.portfolio-modal .modal-content p {
+.leadership-modal .modal-content p {
     margin-bottom: 30px;
 }
 
-.portfolio-modal .modal-content p.item-intro {
+.leadership-modal .modal-content p.item-intro {
     margin: 20px 0 30px;
     font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 16px;
     font-style: italic;
 }
 
-.portfolio-modal .modal-content ul.list-inline {
+.leadership-modal .modal-content ul.list-inline {
     margin-top: 0;
     margin-bottom: 30px;
 }
 
-.portfolio-modal .modal-content img {
+.leadership-modal .modal-content img {
     margin-bottom: 30px;
 }
 
-.portfolio-modal .close-modal {
+.leadership-modal .close-modal {
     position: absolute;
     top: 25px;
     right: 25px;
@@ -814,11 +814,11 @@ ul.social-buttons li a:active {
     cursor: pointer;
 }
 
-.portfolio-modal .close-modal:hover {
+.leadership-modal .close-modal:hover {
     opacity: .3;
 }
 
-.portfolio-modal .close-modal .lr {
+.leadership-modal .close-modal .lr {
     z-index: 1051;
     width: 1px;
     height: 75px;
@@ -829,7 +829,7 @@ ul.social-buttons li a:active {
     transform: rotate(45deg);
 }
 
-.portfolio-modal .close-modal .lr .rl {
+.leadership-modal .close-modal .lr .rl {
     z-index: 1052;
     width: 1px;
     height: 75px;
@@ -839,7 +839,7 @@ ul.social-buttons li a:active {
     transform: rotate(90deg);
 }
 
-.portfolio-modal .modal-backdrop {
+.leadership-modal .modal-backdrop {
     display: none;
     opacity: 0;
 }
