--- a/css/agency.css
+++ b/css/agency.css
@@ -761,6 +761,32 @@ ul.social-buttons li a:active {
     background-color: #fed136;
 }
 
+ul.top-nav-social-buttons {
+    margin-left: 10px;
+    margin-bottom: 0;
+}
+
+ul.top-nav-social-buttons li a {
+    text-align: center;
+    display: block;
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    font-size: 20px;
+    line-height: 40px;
+    outline: 0;
+    color: #fff;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    transition: all .3s;
+}
+
+ul.top-nav-social-buttons li a:hover,
+ul.top-nav-social-buttons li a:focus,
+ul.top-nav-social-buttons li a:active {
+    background-color: #fed136;
+}
+
 .btn:focus,
 .btn:active,
 .btn.active,
